This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Python 2.6 fails to build with Py_NO_ENABLE_SHARED
Type: compile error Stage:
Components: Windows Versions: Python 2.6
process
Status: closed Resolution: accepted
Dependencies: Superseder:
Assigned To: loewis Nosy List: loewis, snaury
Priority: high Keywords: patch

Created on 2008-12-02 20:46 by snaury, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
python-2.6-static.patch snaury, 2008-12-02 20:46
Messages (2)
msg76778 - (view) Author: Alexey Borzenkov (snaury) Date: 2008-12-02 20:46
When building python 2.6 with Py_NO_ENABLE_SHARED compilation fails on
PC/getpathp.c, because it uses PyWin_DLLVersionString and
PyWin_DLLhModule unconditionally, which are implemented in PC/dl_nt.c
only when Py_ENABLE_SHARED is defined. The attached patch fixes the
problem by wrapping dependent parts in if #ifdef Py_ENABLE_SHARED/#endif.
msg80942 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-02-02 15:34
Thanks for the patch. Committed as r69205, r69206, r69207, r69208.
History
Date User Action Args
2022-04-11 14:56:42adminsetgithub: 48744
2009-02-02 15:34:26loewissetstatus: open -> closed
resolution: accepted
messages: + msg80942
2008-12-02 20:58:10loewissetpriority: high
assignee: loewis
2008-12-02 20:53:03snaurysetnosy: + loewis
2008-12-02 20:46:50snaurycreate