Issue #4494: Fix build with Py_NO_ENABLE_SHARED on Windows.